tests/baselines/reference/confusingExclamationBeforeInAndInstanceOf.errors.txt
confusingExclamationBeforeInAndInstanceOf.ts(8,4): error TS1545: Confusing combination of '!' token and 'instanceof' keyword like 'a !instanceof b' is disallowed, as it might be misinterpreted as '!(a instanceof b)'
confusingExclamationBeforeInAndInstanceOf.ts(14,4): error TS1546: Confusing combination of '!' token and 'in' keyword like 'a !in b' is disallowed, as it might be misinterpreted as '!(a in b)'


==== confusingExclamationBeforeInAndInstanceOf.ts (2 errors) ====
    declare let a: any;
    declare let b: any;
    
    a! instanceof b; // should work
    a!instanceof b; // should work
    a/**/!instanceof b; // should work
    a!/**/instanceof b; // should work
    a !instanceof b; // should error
       
!!! error TS1545: Confusing combination of '!' token and 'instanceof' keyword like 'a !instanceof b' is disallowed, as it might be misinterpreted as '!(a instanceof b)'
    
    a! in b; // should work
    a!in b; // should work
    a/**/!in b; // should work
    a!/**/in b; // should work
    a !in b; // should error
       
!!! error TS1546: Confusing combination of '!' token and 'in' keyword like 'a !in b' is disallowed, as it might be misinterpreted as '!(a in b)'
    